# wgk_mcp_file

./: README.md  pyproject.toml
src/wgk_mcp_file/: __init__.py  path_utils.py
