[project]
name = "wgk-mcp-file"
version = "0.1.9"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wgk", email = "2287334379@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.26.0",
]

[project.scripts]
wgk-mcp-file = "wgk_mcp_file:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
